--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <!-- Icon Divider-->
             <div class="divider-custom">
                 <div class="divider-custom-line"></div>
-                <div class="divider-custom-icon"><i class="fa-duotone fa-envelope fa-beat-fade"></i></div>
+                <div class="divider-custom-icon"><i class="fas fa-mail"></i></div>
                 <div class="divider-custom-line"></div>
             </div>
             <!-- Contact Section Form-->
